<?xml version="1.0"?>
<package format="2">
  <name>hayate_imu_ros</name>
  <version>2.0.0</version>
  <description>The hayate_imu_ros package</description>
  <maintainer email="soarbear7@gmail.com">ROBOSHO</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hayate_imu_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
